--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -22,7 +22,7 @@
       <div class="container mx-auto flex justify-between items-center">
         <a href="/" class="text-white text-lg font-bold">Library Management</a>
         <div class="flex space-x-4">
-            <a href="/api/" class="text-white">Docs</a>
+            <a href="/api/" class="text-white">Home</a>
           <a href="/api/books" class="text-white">Books</a>
           <a href="/api/patrons" class="text-white">Patrons</a>
           <a href="/api/borrowings" class="text-white">Borrowings</a>
