--- a/server/src/views/patrons.ejs
+++ b/server/src/views/patrons.ejs
@@ -33,7 +33,7 @@
           <% patrons.forEach(patron => { %>
           <tr>
             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-              <%= patron.PatronID %>
+              <%= patron._id %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
               <%= patron.Name %>
@@ -48,8 +48,8 @@
               <%= patron.MembershipID %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <a href="/api/edit-patron/<%= patron.PatronID %>" class="text-blue-600 hover:underline mr-2">Edit</a>
-              <form action="/api/delete-patron/<%= patron.PatronID %>" method="POST" class="inline">
+              <a href="/api/edit-patron/<%= patron._id %>" class="text-blue-600 hover:underline mr-2">Edit</a>
+              <form action="/api/delete-patron/<%= patron._id %>" method="POST" class="inline">
                 <input type="hidden" name="_method" value="DELETE">
                 <button type="submit" class="text-red-600 hover:underline">Delete</button>
               </form>
