--- a/server/src/views/staff.ejs
+++ b/server/src/views/staff.ejs
@@ -30,7 +30,7 @@
           <% staff.forEach(staffMember => { %>
           <tr>
             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-              <%= staffMember.StaffID %>
+              <%= staffMember._id %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
               <%= staffMember.Name %>
@@ -42,8 +42,8 @@
               <%= staffMember.ContactInfo %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <a href="/api/edit-staff/<%= staffMember.StaffID %>" class="text-blue-600 hover:underline mr-2">Edit</a>
-              <form action="/api/delete-staff/<%= staffMember.StaffID %>" method="POST" class="inline">
+              <a href="/api/edit-staff/<%= staffMember._id %>" class="text-blue-600 hover:underline mr-2">Edit</a>
+              <form action="/api/delete-staff/<%= staffMember._id %>" method="POST" class="inline">
                 <input type="hidden" name="_method" value="DELETE">
                 <button type="submit" class="text-red-600 hover:underline">Delete</button>
               </form>
