--- a/views/borrowing.ejs
+++ b/views/borrowing.ejs
@@ -3,7 +3,7 @@
   <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
     <div class="flex justify-between items-center mb-4">
       <h1 class="text-2xl font-bold">Borrowing List</h1>
-      <a href="/api/add-loan" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md shadow-md">Add new loan Book</a>
+      <a href="/add-loan" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md shadow-md">Add new loan Book</a>
     </div>
     <div class="overflow-hidden border border-gray-200 shadow-md sm:rounded-lg">
       <table class="min-w-full divide-y divide-gray-200">
@@ -48,8 +48,8 @@
               <%= borrowing.PatronID.Name %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <a href="/api/edit-loan/<%= borrowing._id %>" class="text-blue-600 hover:underline mr-2">Edit</a>
-              <form action="/api/delete-loan/<%= borrowing._id %>" method="POST" class="inline">
+              <a href="/edit-loan/<%= borrowing._id %>" class="text-blue-600 hover:underline mr-2">Edit</a>
+              <form action="/delete-loan/<%= borrowing._id %>" method="POST" class="inline">
                 <button type="submit" class="text-red-600 hover:underline">Delete</button>
               </form>
             </td>
