--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure voluptatibus dolorem dolorum rerum dolor, deleniti vero necessitatibus quia ullam, ab accusantium distinctio quis, fugiat nobis nulla totam inventore animi aperiam!
           </p>
           
-          <a href="/api/" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md shadow-md inline-block">
+          <a href="/" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md shadow-md inline-block">
             Explore Our Catalog
           </a>
         </div>
@@ -62,7 +62,7 @@
       <h2 class="text-3xl font-bold mb-4">Contact Us</h2>
       <div class="bg-white rounded-lg overflow-hidden shadow-md p-6">
         <p class="text-gray-700 mb-4">Have questions or feedback? Contact us!</p>
-        <a href="/api/" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md shadow-md inline-block">
+        <a href="/" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md shadow-md inline-block">
           Contact Us
         </a>
       </div>
