--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure voluptatibus dolorem dolorum rerum dolor, deleniti vero necessitatibus quia ullam, ab accusantium distinctio quis, fugiat nobis nulla totam inventore animi aperiam!
           </p>
           
-          <a href="/" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md shadow-md inline-block">
+          <a href="/api" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-md shadow-md inline-block">
             Explore Our Catalog
           </a>
         </div>
