--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -20,13 +20,13 @@
   <body class="bg-gray-100  ">
     <nav class="bg-blue-600 p-4 mb-5">
       <div class="container mx-auto flex justify-between items-center">
-        <a href="/" class="text-white text-lg font-bold">Library Management</a>
+        <a href="/api" class="text-white text-lg font-bold">Library Management</a>
         <div class="flex space-x-4">
-            <a href="/" class="text-white">Home</a>
-          <a href="/books" class="text-white">Books</a>
-          <a href="/patrons" class="text-white">Patrons</a>
-          <a href="/borrowings" class="text-white">Borrowings</a>
-          <a href="/staff" class="text-white">Staff</a>
+            <a href="/api" class="text-white">Home</a>
+          <a href="/api/books" class="text-white">Books</a>
+          <a href="/api/patrons" class="text-white">Patrons</a>
+          <a href="/api/borrowings" class="text-white">Borrowings</a>
+          <a href="/api/staff" class="text-white">Staff</a>
         </div>
         <div>
           <input
