--- a/views/borrowing.ejs
+++ b/views/borrowing.ejs
@@ -42,10 +42,10 @@
               <%= borrowing.ReturnDate.toDateString() %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <%= borrowing.BookID.Title %>
+              <%= borrowing.BookID ? borrowing.BookID.Title : 'N/A' %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <%= borrowing.PatronID.Name %>
+              <%= borrowing.PatronID ? borrowing.PatronID.Name : 'N/A' %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
               <a href="/api/edit-loan/<%= borrowing._id %>" class="text-blue-600 hover:underline mr-2">Edit</a>
